# annotaloop

./: .gitignore  README.md  codex.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  constants.ts  markdown.ts  mermaid.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  domain.rs  exporter.rs  lib.rs  main.rs  utils.rs
src-tauri/windows/: file-associations.nsh
src/components/home/: HomeModals.tsx
src/components/reader/: ReaderComponents.tsx
