[package]
name = "loop-book"
version = "0.4.1"
description = "A local-first Markdown reader for annotation loops."
authors = ["Loop Book"]
edition = "2021"

[lib]
name = "loop_book_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.5.0", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
